# BigGrep

./: .gitignore  LICENSE.txt  Makefile  Makefile.am  NEWS  README.md  autogen.sh  biggrep.spec  biggrep.spec.in  configure.ac
conf/biggrep/: biggrep.conf
doc/: INDEX_DETAILS.txt  Makefile  Makefile.am  bgextractfile.pod  bgindex.1.xml  bgindex.pod  bgparse.1.xml  bgparse.pod  bgsearch.1.xml  bgsearch.pod  bgverify.1.xml  bgverify.pod  biggrep.conf.5.xml  biggrep.conf.pod
m4/: ax_check_libz.m4  ax_check_python.m4  ax_cxx_compile_stdcxx_0x.m4  boost.m4
src/: BGAtomicCounter.hpp  BGLogging.hpp  LogUtils.h  Logger.hpp  Makefile.am  PFOR.hpp  PFORTest.cpp  Stopwatch.hpp  StrFormat.hpp  StrFormatTest.cpp  VarByte.hpp  VarByteTest.cpp  bg-extract-or-replace-fileids.py  bgdump.cpp  bgextractfile.cpp  bgi_header.hpp  bgindex_th.cpp  bgparse.cpp  bgsearch.py  bgsearch_old.py  bgstopwatch.hpp  bgverify.cpp
src/biggrep/: __init__.py  bgsearch.py  bgsearch_jobmanager.py  bgsearch_processor.py  bgverify_processor.py
src/jobdispatch/: __init__.py  jobdispatch.py  jobmanager.py  mockjobmanager.py  processor.py
